--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     min-height: 100vh;
     background-color: #e958e4;
-    background-image: url('Images/cuecaminion-removebg-preview.png');
+    background-image: url('Images/cuecas.png');
     background-repeat: no-repeat;
     background-position: bottom center;
     font-family: 'Montserrat', sans-serif;
